--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# MySQL properties
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/mydb?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+db.username=root
+db.password=root
+db.entity.package="ru.kata.spring.boot_security.demo.model"
 
+# Hibernate properties
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=update
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
