--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ db.entity.package="ru.kata.spring.boot_security.demo.model"
 # Hibernate properties
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
