--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ db.username=root
 db.password=root
 db.entity.package="ru.kata.spring.boot_security.demo.model"
 
+logging.level.org.springframework=debug
+logging.level.org.hibernate=debug
+
 # Hibernate properties
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
