--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,25 @@
+server.port=8181
+
+spring.datasource.url=jdbc:postgresql://localhost:15432/books_db
+spring.datasource.username=username
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
 # MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/mydb?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=root
-db.password=root
-db.entity.package="ru.kata.spring.boot_security.demo.model"
+#db.driver=com.mysql.cj.jdbc.Driver
+#db.url=jdbc:mysql://localhost:3306/mydb?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+#db.username=root
+#db.password=root
+#db.entity.package="ru.kata.spring.boot_security.demo.model"
 
 logging.level.org.springframework=debug
 logging.level.org.hibernate=debug
 
 # Hibernate properties
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.show_sql=true
+#hibernate.hbm2ddl.auto=update
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
