--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,22 @@ services:
     ports:
       - "8181:8181"
     depends_on:
-      - service-db
+      service-db:
+        condition: service_healthy
     environment:
       - SERVER_PORT= 8181
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://service-db/books_db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://service-db/my_db
 
   service-db:
     image: postgres:14.7-alpine
     environment:
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: ZxSa391!
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready", "-d", "my_db" ]
+      interval: 10s
+      timeout: 3s
+      retries: 3
     ports:
       - "15432:5432"
     volumes:
@@ -30,7 +36,7 @@ services:
     image: dpage/pgadmin4:8.3
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_EMAIL: admin@admin.ru
       PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "5050:80"
